# routes/api.php
@@ -51,16 +51,10 @@ Route::group([
 });
 
 Route::group([
-    'prefix' => 'v1/external-books',
+    'prefix' => 'external-books',
     'as' => 'api.',
 ], function () {
 
-    Route::get('/all', [BooksController::class, 'index']);
+    Route::get('', [BooksController::class, 'fetch_external_api']);
 
-});
-
-
-
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
 });
