# storage/api-docs/api-docs.json
@@ -24,8 +24,8 @@
             "description": "API Endpoints of all locally stored books"
         },
         {
-            "name": "External Books",
-            "description": "External API Endpoints"
+            "name": "External-Books",
+            "description": "Ice And Fire API"
         }
     ],
     "paths": {
@@ -38,7 +38,7 @@
                 "description": "Store new book",
                 "operationId": "storeBook",
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {}
@@ -119,7 +119,7 @@
                         "schema": {
                             "type": "string"
                         },
-                        "description": "Date book was released"
+                        "description": "Date book was released (e.g 2022-03-05)"
                     }
                 ]
             }
@@ -136,22 +136,27 @@
                     "200": {
                         "description": "Successful operation",
                         "content": {
-                            "application/json": {}
+                            "application/json": {
+                                "scheme": {
+                                    "$ref": "#/components/schemas/PaginatedResult"
+                                }
+                            }
                         }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "not found"
                     }
                 },
+                "parameters" :[
+                    
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Search"
+                    }
+
+                ],
                 "security": [
                     {
                         "passport": []
@@ -173,18 +178,6 @@
                         "content": {
                             "application/json": {}
                         }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "404": {
-                        "description": "not found"
                     }
                 },
                 "parameters" :[
@@ -273,23 +266,17 @@
                 "description": "Delete book",
                 "operationId": "deleteBook",
                 "responses": {
-                    "200": {
-                        "description": "Successful operation",
+                    "204": {
+                        "description": "No content",
                         "content": {
                             "application/json": {}
                         }
                     },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
                     "404": {
-                        "description": "not found"
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {}
+                        }
                     }
                 },
                 "parameters" :[
@@ -350,6 +337,49 @@
                     }
                 ]
             }
+        },
+        "/external-books": {
+            "get": {
+                "tags": [
+                    "External-Books"
+                ],
+                "summary": "Queries the Ice And Fire API",
+                "description": "Query API",
+                "operationId": "queryAPI",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                },
+                "parameters" :[
+                    
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "Name of book to query"
+                    }
+
+                ]   
+            }
         }
     },
     "components": {
@@ -376,6 +406,18 @@
                     }
                 },
                 "type": "object"
+            },
+            "PaginatedResult": {
+                "type": "object",
+                "properties" :{
+                    "has_next": { "type": "boolean", "example": true },
+                    "has_prev": { "type": "boolean", "example": true },
+                    "page": { "type": "number", "example": 3 },
+                    "pages": { "type": "number", "example": 5 },
+                    "per_page": { "type": "number", "example": 20 },
+                    "total": { "type": "number", "example": 100 },
+                    "results": { "type": "array", "items": {} }
+                }
             }
         }
     },
